--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -27,56 +27,24 @@
 </head>
 <body>
   
-  <div class="wrapper">
-    <div class="logo-topbar">
-      <div class="logo-topbar-fill">
-        <div class="container">
-          <div>
-            <% if current_user %>
-              <%= link_to bubboli, root_path %>
-            <% else %>
-              <%= link_to bubboli, root_path %>
-            <% end %>
-          </div>
-            
-        </div>
-      </div>
-    </div>
-  
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-      <div class="container">
-          <ul class="nav">
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Bubboli Favorites", favorite_gift_path %></li>
-            <li><%= link_to "Brands We Love", gift_brand_path %></li>
-            <li><%= link_to "About", about_path %></li>
-            <% if signed_in? %>
-              <li id="fat-menu" class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  Account <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= current_user.admin == true ? link_to("Admin Panel", admin_path) : link_to("Profile", current_user )%></li>
-                  <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                  <li class="divider"></li>
-                  <li>
-                    <%= link_to "Sign out", sign_out_path, method: "delete" %>
-                  </li>
-                </ul>
-              </li>
-            <% else %>
-              <li><%= link_to "Sign in", sign_in_path %></li>
-            <% end %>
-                      
-                      
-                      
-            <li class="socialmedia-overlap blog"><%= link_to blog, blogs_path %></li>
+<%= render partial: "layouts/header" %>
 
-          </ul>
-        </div>
-      </div>
+    <div class="container">
+      <hr class="subnav-top">
+
+      <ul class="sub-nav pull-left">    
+        <li><%= link_to "UPCOMING BIRTHDAYS", '#' %></li>
+        <li><%= link_to "MY KIDS", '#' %></li>
+        <li><%= link_to "CHILDREN I AM FOLLOWING", '#' %></li>
+      </ul>
+      
+      <%= render partial: "layouts/subnav" %>
+      
+      <hr class="subnav-bottom">
     </div>
+  </div>
+
+<%= render partial: "shared/flash_messages", flash: flash %> <br>
 
 
 
@@ -86,7 +54,7 @@
     
         <div class="span3 static-left-side" > 
           <div class="profile-well">
-          Test
+          <%= current_user.first_name %>
           </div>
       
           <div>      
@@ -108,10 +76,19 @@
           <%= yield %>
     
         </div>
-    
       </div>
-  
+      
+      
     </div>
+    <div class="push"></div>
+</body>
 
 
 
+<div>
+  <footer>
+    <br>
+    <%= render partial: "layouts/footer" %>
+  </footer>
+</div>
+</html>
