--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@
     
   </div>
  
-  <div>
+  <div class="pull-right">
   <%= f.button :submit, 'Submit', :class => "primary" %>
   </div>
   <% end %>
