--- a/app/views/layouts/gift.html.erb
+++ b/app/views/layouts/gift.html.erb
@@ -2,10 +2,12 @@
 <html>
 <head>
   <title><%= @page_title || 'Bubboli' %></title>
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "application",  :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  
+  <%= favicon_link_tag %>
+
+
 <% # Adding google analytics below %>  
   <script type="text/javascript">
 
@@ -21,7 +23,7 @@
     })();
 
   </script>
-    
+  
 </head>
 <body>
   
@@ -35,22 +37,27 @@
             <li><%= link_to "BUBBOLI FAVORITES", '#' %></li>
             <li><%= link_to "BABY SHOWERS", '#' %></li>
           </ul>
-          
+      
           <%= render partial: "layouts/subnav" %>
-          
+      
           <hr class="subnav-bottom">
 
         </div>
     </div>
     
-
+    
+    
+    
+    
+    <%= render partial: "shared/flash_messages", flash: flash %> <br>
 
     <%= yield %>
-
-    <div class="push"></div>
     
-  </div>  
+    <div class="push"></div>
+
+  </div>
 </body>
+
 
 <div>
   <footer>
