--- a/app/views/gift_accessions/destroy.js.erb
+++ b/app/views/gift_accessions/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#edit_gift_accession_<%= @gift_accession.id %>').closest(".related-gifts").hide();
+$('#edit_gift_accession_<%= @gift_accession.id %>').closest(".approve_gifts_list").hide();
