--- a/app/views/gift_accessions/update.js.erb
+++ b/app/views/gift_accessions/update.js.erb
@@ -1,2 +1,2 @@
-$('#edit_gift_accession_<%= @gift_accession.id %>').closest(".related-gifts").appendTo('#approved_gifts')
+$('#edit_gift_accession_<%= @gift_accession.id %>').closest(".approve_gifts_list").appendTo('#approved_gifts')
 $('#edit_gift_accession_<%= @gift_accession.id %>').hide();
