--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -12,7 +12,7 @@
 <% @page_title = @gift.name %>
 <div class="container">
 
-<%= link_to("«« Back to Gifts", gifts_path) %>
+<i class="icon-chevron-left"></i><span class="red-link"><%= link_to("Back to Gifts", gifts_path) %></span><br><br>
   <div class="row">
     <div class="span9">
       
