--- a/app/views/relationships/_approve_purchased_gifts.html.erb
+++ b/app/views/relationships/_approve_purchased_gifts.html.erb
@@ -1,21 +1,29 @@
 
 <div class="row" id ="approve_gifts">
+
   <ul class="no-margin-or-bullet">
     <% if @approve_gifts.empty? %>   
-      <p class="no-gifts">There are no newly purchased gifts that need your approval now.</p>
+      
     <% else %>
+      <p class="approve_gifts_title">Please approve these gifts.</p>
       <% @approve_gifts.each do |ag| %>
-        <li class="related-gifts">
+      
+        <li class="row approve_gifts_list blue">
           <%= link_to image_tag(ag.gift.gift_images.first.image_url(:sm_thumb_pic)), gift_path(ag.gift) if ag.gift %><br>
           <%= link_to ag.gift.name, gift_path(ag.gift) if ag.gift %>
-          <%= form_for([ag.child, ag], :remote => true ) do |f| %>
-            <%= f.check_box :approved %>
-            <%= f.submit "Confirm" %>
-            <%= link_to "Did not receive this", [ag.child, ag], :method => :delete, :data => {:confirm => "Are you sure you did not receive this gift?  Maybe it has not arrived yet."}, :remote => true %>
+          <%= form_for([ag.giftee, ag], :remote => true ) do |f| %>
+            <%= f.check_box :approved %> Received this
+            <%= f.submit "Confirm" %><br>
+            <%= link_to "Did not receive this", [ag.giftee, ag], :method => :delete, :data => {:confirm => "Are you sure you did not receive this gift?  Maybe it has not arrived yet."}, :remote => true %>
           <% end %>
+    
         </li>
       <% end %>      
     <% end %>
   </ul>
+
+
+
+
 
 </div>
