--- a/app/views/relationships/_recommended_gifts.html.erb
+++ b/app/views/relationships/_recommended_gifts.html.erb
@@ -1,12 +1,16 @@
 <div class="row">
-
-    <ul class="no-margin-or-bullet">
+  
+    <ul>
     <% @gifts_by_user_pref.each do |gift| %>
-      <li class="related-gifts">
-        <%= link_to image_tag(gift.gift_images.first.image_url(:sm_thumb_pic)), gift_path(gift) %></br>
-        <%= link_to gift.name, gift_path(gift) %>
+      <li class="recommended-gifts block">
+        <%= link_to image_tag(gift.gift_images.first.image_url(:sm_thumb_pic)), gift_path(gift) %>
+        <%= link_to gift.name, gift_path(gift) %><br>
+        <% link = "http://"+gift.permalink %>
+        <div class="row span2 offset1">
+        <button class="btn btn-mini btn-success btn-spacing white-link btn-fixed-bottom"><%= link_to "Buy This", link, :target => "_blank" %></button>
+        </div>
       </li>
     <% end %>
-  </ul>
-
+    </ul>
+  
 </div>
