added user pictures

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -31,7 +31,7 @@
           <hr class="subnav-top">
 
           <ul class="sub-nav pull-left">    
-            <li><%= link_to "NEWLY ADDED", '#' %></li>
+            <li><%= link_to "NEWEST", '#' %></li>
             <li><%= link_to "BUBBOLI FAVORITES", '#' %></li>
             <li><%= link_to "BABY SHOWERS", '#' %></li>
           </ul>
