--- a/app/views/layouts/gift.html.erb
+++ b/app/views/layouts/gift.html.erb
@@ -34,7 +34,7 @@
 
           <ul class="sub-nav pull-left">    
             <li><%= link_to "NEWLY ADDED", '#' %></li>
-            <li><%= link_to "BUBBOLI FAVORITES", '#' %></li>
+            <li><%= link_to "BUBBOLI FAVORITES", favorite_gift_path %></li>
             <li><%= link_to "BABY SHOWERS", '#' %></li>
           </ul>
       
