--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
 <div class="span6 form-stacked">
+  <%= f.input :image, :label => "Photo", :as => :file %>
   <%= f.input :first_name, :label => "First Name", :input_html => { :class => "input-xlarge" } %>
   <%= f.input :last_name, :label => "Last Name", :input_html => { :class => "input-xlarge" } %> 
   <%= f.input :email, :input_html => { :class => "input-xlarge" } %>
