--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -219,11 +219,11 @@ html {
   	
 body {
   padding-top: 155px;
-  /*padding-bottom: 70px;*/
-  /*height: 100%;*/
+  /*padding-bottom: 70px;
+  height: 100%;*/
   font-family: 'LatoRegular';
-  /*background: url(background_image.png) repeat scroll 0 0;*/
-  /*background: url(footer_pattern.png) repeat scroll 0 0 transparent;*/
+  /*background: url(background_image.png) repeat scroll 0 0;
+  background: url(footer_pattern.png) repeat scroll 0 0 transparent;*/
   }
 
 p {
@@ -463,8 +463,8 @@ footer, {
   text-align: center;
   /*background: url(footer_pattern.png) repeat scroll 0 0 transparent;*/
   background: url(gray_w_dash_line.jpg) repeat scroll 0 0 transparent;
-  /*background-color: #eee; */
-  /*background-color: #A6A6A6;*/
+  /*background-color: #eee;
+  background-color: #A6A6A6;*/
   clear: both;
   padding-top: 10px;
   padding-bottom: 20px;
