--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   
-  <%= simple_form_for @user do |f| %>
+  <%= simple_form_for @user, :html => {:multipart => true} do |f| %>
   <div class="row">
 
     <%= render(:partial => 'form', :locals => {:f => f})%>
