--- a/app/views/users/pending.html.erb
+++ b/app/views/users/pending.html.erb
@@ -1,15 +1,20 @@
-<%= link_to "<<< Back To My Profile", user_path(current_user) %> <br><br>
-
-<span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">Pending Relationships</span>
-<hr/>
+<i class="icon-user"></i> <span class="red-link"><%= link_to "Back To My Profile", user_path(current_user)%></span><br><br>
 
 
-<div class="row">
-  <ul class="child-list">
-    <% @pending.each do |r| %>
-    <li class="children-following child-list block">
-      <%= r.child.first_name %>    
-    </li>  
-    <% end %>
-  </ul>
+<div class="op3-title op3-stitched-shadow">
+  PENDING RELATIONSHIPS
 </div>
+
+<div class="test-stitch"><br></div>
+
+  <div class="row">
+    <ul class="child-list">
+      <% @pending.each do |r| %>
+      <li class="children-following child-list block">
+        <%= image_tag(r.child.child_images.first.image_url(:sm_thumb)) if r.child.child_images.first %>
+        <%= r.child.first_name %>    
+      </li>  
+      <% end %>
+    </ul>
+  </div>
+
