--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -1,15 +1,22 @@
-<%= link_to "<<< Back To My Profile", user_path(current_user) %> <br><br>
-
-<span style="font-family: MountainsofChristmas; font-size: 18px; color: #FF6F6A">My Kids Requests</span>
-<hr/>
+<i class="icon-user"></i> <span class="red-link"><%= link_to "Back To My Profile", user_path(current_user)%></span><br><br>
 
 
-<div class="row">
-  <ul class="child-list">
-    <% @requests.each do |r| %>
-    <li class="children-following child-list block">
-      <%= render(:partial => "followers_request", :locals => {:r => r}) %>
-    </li>  
-    <% end %>
-  </ul>
+<div class="op3-title op3-stitched-shadow">
+  MY KIDS' REQUESTS
+</div>
+
+<div class="test-stitch"><br>
+
+  <div class="row">
+    <ul class="child-list">
+      <% if current_user.my_kids_requests.count > 0 %>
+        <% @requests.each do |r| %>
+        <li class="children-following child-list block">
+          <%= render(:partial => "followers_request", :locals => {:r => r}) %>
+        </li>  
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+
 </div>
