--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,11 +7,11 @@
            <%= link_to bubboli, root_path %>
          <% end %>
        <ul class="nav nav-pills pull-right">    
-         <li class="<%= 'active' if params[:controller] == 'gifts' %>"><%= link_to "SHOP", gifts_path %></li>
-         <li class="<%= 'active' if params[:controller] == 'blogs' %>"><%= link_to "BLOG", blogs_path %></li>
-         <li class="<%= 'active' if params[:controller] == 'pages' %>"><%= link_to "ABOUT", about_path %></li>           
+         <li class="<%= 'active' if controller.is_a?(GiftsController) %>"><%= link_to "SHOP", gifts_path %></li>
+         <li class="<%= 'active' if controller.is_a?(BlogsController) %>"><%= link_to "BLOG", blogs_path %></li>
+         <li class="<%= 'active' if controller.is_a?(PagesController) %>"><%= link_to "ABOUT", about_path %></li>           
          <% if signed_in? %>
-           <li id="fat-menu" class="dropdown <%= 'active' if params[:controller] == 'users' %> <%= 'active' if params[:controller] == 'relationships' %>">
+           <li id="fat-menu" class="dropdown <%= 'active' if controller.is_a?(UsersController) %> <%= 'active' if controller.is_a?(RelationshipsController) %>">
              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                ACCOUNT <b class="caret"></b>
              </a>
@@ -25,7 +25,7 @@
              </ul>
            </li>
          <% else %>
-           <li class="<%= 'active' if params[:controller] == 'sessions' %>"><%= link_to "SIGN IN", sign_in_path %></li>
+           <li class="<%= 'active' if controller.is_a?(SessionsController) %>"><%= link_to "SIGN IN", sign_in_path %></li>
          <% end %>
        </ul><br>
        <span class="red-font pull-right"><%= "Welcome back, #{current_user.first_name}" if current_user %></span>
