--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -1,5 +1,29 @@
 <i class="icon-user"></i> <span class="red-link"><%= link_to "Back To My Profile", user_path(current_user)%></span><br><br>
 
+<% if @invitations.count > 0 %>
+<div class="op3-title op3-stitched-shadow">
+  YOUR INVITATION REQUESTS
+</div>
+
+<div class="test-stitch"><br></div>
+
+  <div class="row">
+    <%= form_for :invitation, :multipart => true, :remote => true, :url => invitation_confirm_or_delete_url do |f| %>
+      <% @invitations.each do |r| %>
+        <ul class="child-list">
+          <li class="children-following child-list block">
+            <%= image_tag(r.child.child_images.first.image_url(:sm_thumb)) if r.child.try(:child_images).try(:first) %>
+            <%= r.child.try(:first_name) %>
+            <%= r.sender.try(:first_name)%>
+            <%= f.hidden_field :id, :value => r.id %>
+            <%= select_tag 'child', options_from_collection_for_select(@confirmed_children, 'id', 'first_name'), :prompt => 'Confirm This Child As', :onChange=>"this.form.submit()" if @confirmed_children.any? %>    
+          </li>  
+        </ul>  
+      <% end %>
+    <% end %>
+  </div>
+<% else %>
+<% end %>
 
 <div class="op3-title op3-stitched-shadow">
   MY KIDS' REQUESTS
