only parents can set profile picture

--- a/app/views/child_images/index.html.erb
+++ b/app/views/child_images/index.html.erb
@@ -13,7 +13,7 @@
         <li>
           <div class="hover-div">
             <%= image_tag(f.image_url(:thumb), :id => "child_pics") %><br>
-            <div class="hover-link"><%= link_to "Make Profile Picture", set_as_profile_picture_path(f) %></div>
+            <div class="hover-link"><%= link_to "Make Profile Picture", set_as_profile_picture_path(f) if current_user.is_parent_of?(f.child) %></div>
           </div>
         </li>
       <% end %>
