unified form for adding a child and MORE

--- a/app/views/child_images/index.html.erb
+++ b/app/views/child_images/index.html.erb
@@ -2,14 +2,16 @@
 
   <div class="btn-group">
     <button class="btn"><%= link_to @child.first_name, relationship_path(@relationship) %></button>
-    <button class="btn"><%= link_to "Upload Picture", new_child_child_image_path, :id => "new_child_image", :remote => true %></button>
+    <% if current_user.is_parent_of?(@child)%><button class="btn"><%= render 'form' %><% else %><% end %>
   </div>
   
   <br>
+  
+  <% if @child_images.any? %>
    
   <div class="row">
     <ul class="photos-collage no-margin-or-bullet">
-      <% @child_images.each do |f| %>
+      <% @child_images.select(&:id).each do |f| %>
         <li>
           <div class="hover-div">
             <%= image_tag(f.image_url(:thumb), :id => "child_pics") %><br>
@@ -19,5 +21,6 @@
       <% end %>
     </ul>
   </div>  
+  <% end %>
 
 </div>
