--- a/app/views/children/search_child.html.erb
+++ b/app/views/children/search_child.html.erb
@@ -9,9 +9,7 @@
     <div class="row">
       <div class=" span2 child-search-well ">
       <%= simple_form_for @search, :url => search_child_path do |f| %>
-        <%= f.input :users_email_equals, :label => 'Search by Parent Email', :required => false %>
-        <p style="font-weight: bold">- OR -</p>
-        <%= f.input :users_work_email_equals, :label => 'Search by Parent Work Email', :required => false %>
+        <%= f.input :users_email_or_users_work_email_equals, :label => 'Search by Parent Email', :required => true %>
         <%= f.button :submit, 'Search', :class => 'btn primary' %>
       <% end %>
       
@@ -22,9 +20,8 @@
         <% if params[:search].blank? %>
           Your search results here.          
         <% elsif @children.empty? %>
-          <p>This child is not in the database yet. </p>
-          <p>Be the first to add this child.</p>
-          <%= link_to "Add A Kid", new_child_path, :class => "normal-button round" %>
+          <p>No results found. Be the first to add this child.</p>
+          <%= render 'new', :invitee => @search_term %>
         <% else %>
           <% @children.each do |child| %>
           <% rel = current_user.relationships.where(:child_id => child.id).to_a %>
